--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todo-platform",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/pratyansh-agrawal/todo-platform/",
   "dependencies": {
     "@craco/craco": "^6.2.0",
     "@material-ui/core": "^4.12.2",
@@ -9,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -16,6 +18,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
