--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo-platform",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/pratyansh-agrawal/todo-platform/",
+  "homepage": "https://pratyansh-agrawal.github.io/todo-platform",
   "dependencies": {
     "@craco/craco": "^6.2.0",
     "@material-ui/core": "^4.12.2",
